--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flexWrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  max-height: 160px;
+}
+
+.inquicker .block-title {
+  font-size: 20px;
+  width: 105%;
+  padding: 10px 21px 12px 0;
+  border-bottom: 2px solid #d71920;
+  font-size: 22px;
+  /* margin-bottom: 12px; */
+}
+
+#inquicker-block form {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+#inquicker-block input[type=submit] { 
+  height: 42px;
+  background: #d71920;
+  width: 140px;
+  border: 1px solid #d71920;
+  border-left: 4px solid #951015;
   color: white;
+  text-shadow:0 1px 2px #333;
+  padding: 8px; 
 }
 
-.App-link {
-  color: #61dafb;
+#inquicker-block p {    
+  padding-right: 17px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#inquicker-block select {
+  height: 42px;
+  background: #f2f4f8;
+  color: #000;
+  border: 1px solid #d7dbe2;
+  font-weight: 400;
+  width: 140px;
+  padding:5px 20px 5px 10px;
+  background-image: linear-gradient(45deg, transparent 50%, #d7dbe2 50%), linear-gradient(135deg, #d7dbe2 50%, transparent 50%), linear-gradient(to right, #f2f4f8, #f2f4f8);
+  background-position: calc(100% - 15px) calc(1em + 0px), calc(100% - 10px) calc(1em + 0px), 100% 0;
+  background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
+  background-repeat: no-repeat;
+  margin: 0 10px 20px 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
+
+/* The following is a hack to replace 3rd party copy. */
+
+div[id^='inOut'] > div:nth-child(1) > span:nth-child(1) {
+  visibility: hidden;
+}
+
+div[id^='inOut'] > div:nth-child(1) > span:nth-child(1):before {
+  content: "There are no available online check-in time slots for this location. Please go directly to the emergency room or view another nearby ER location’s online check-in availability.";
+  visibility: visible;
+  display: inline;
+  position: relative;
+}
+
+/*
+  St Luke's "Limited" Availability message override
+  {
+    #inOut0: Holcombe, 
+    #inOut1: McNair, 
+    #inOut7: BSLMC, 
+    #inOut12: Vintage, 
+    #inOut16: Brazosport 
+  }
+*/
+
+/* #inOut0 > div:nth-child(1) > span:nth-child(1),
+#inOut1 > div:nth-child(1) > span:nth-child(1),
+#inOut7 > div:nth-child(1) > span:nth-child(1),
+#inOut12 > div:nth-child(1) > span:nth-child(1),
+#inOut16 > div:nth-child(1) > span:nth-child(1) {
+  visibility: hidden;
+}
+
+#inOut0 > div:nth-child(1) > span:nth-child(1):before,
+#inOut1 > div:nth-child(1) > span:nth-child(1):before,
+#inOut7 > div:nth-child(1) > span:nth-child(1):before,
+#inOut12 > div:nth-child(1) > span:nth-child(1):before,
+#inOut16 > div:nth-child(1) > span:nth-child(1):before {
+  content: "This location offers limited online check-in time slots. Don't see a time that works for you? Please go directly to the emergency room or view another nearby ER location’s online check-in availability.";
+  visibility: visible;
+  display: inline;
+  position: relative;
+} */
